syntax = "proto3";

package xmbig;

option go_package = "github.com/DerBanane/xmbig";

message MinerStatus {
  string client_id = 1;
  string status = 2;
  float hashrate = 3;
  float temperature = 4;
}

message ControlCommand {
  string command = 1;
  string payload = 2;
}

message MinerConfig {
  string config = 1;
}

message ServerResponse {
    bool success = 1;
    string message = 2;
    oneof data {
        MinerStatus miner_status = 3;
        MinerConfig miner_config = 4;
    }
}